# Assesment-task

./: .env.example  .gitignore  DATASCHEMA.json  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: build.yml  data-ingestor.yml  data-processor.yml  frontend.yml  graphql-api-gateway.yml  notifications-service.yml
DataIngestor/: .env.example  Dockerfile  README.md  coverage.out  go.mod  main.go  sonar-project.properties
DataIngestor/broker/: broker.go  broker_test.go
DataIngestor/config/: config.go
DataIngestor/ingestor/: ingestor.go  ingestor_test.go
DataIngestor/models/: config.go  request-models.go  response-models.go
DataProcessor/: DataProcessor.slnx  README.md
DataProcessor/DataProcessor.Application/: DataProcessor.Application.csproj  DependencyInjection.cs  GlobalUsings.cs
GraphQLAPIGateway/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  sonar-project.properties
GraphQLAPIGateway/proto/: buf.yaml
GraphQLAPIGateway/proto/parameters/: parameters.proto
GraphQLAPIGateway/src/: grpc_client.rs  main.rs
GraphQLAPIGateway/src/graphql/: mod.rs  schema.graphql  schema.rs
NotificationsService/: Dockerfile  NotificationsService.csproj  NotificationsService.slnx  Program.cs  README.md  appsettings.Development.json  appsettings.json
frontend/: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  sonar-project.properties  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+150 files in other folders)
