[package]
name = "graphql-api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "graphql-api-gateway"
path = "src/main.rs"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
